[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astridr-security"
version = "0.1.0"
description = "Security pipeline layers extracted from the Astridr AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "aiosqlite>=0.19",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
